[workspace]
members = ["demo", "common", "ultraface", "web-infer"]
resolver = "2"

[workspace.dependencies]
ort = { version = "2.0.0-rc.1", features = ["ndarray", "download-binaries"], default-features = false }
ndarray = "0.15.6"
thiserror = "1.0.58"
opencv = "0.88.8"

[profile.dev]
opt-level = 3
lto = "off"

[profile.release]
lto = "fat"
codegen-units = 1
