[package]
name = "ultraface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ort = { workspace = true }
ndarray = { workspace = true }
thiserror = { workspace = true }
common = { path = "../common" }
